# E.D.I.T.H

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
config/: authorization.example.yaml  edith.example.yaml
docs/: ARCHITECTURE.md  BUILD_PLAN.md  ROADMAP.md
docs/research/: EDITH_FEATURE_SPEC.md  hermes-architecture.md  hermes-features.md  openclaw-architecture.md  openclaw-features.md
edith/: __init__.py  __main__.py
edith/browser/: __init__.py  fetch.py  session.py  stealth.py
edith/channels/: __init__.py  base.py
edith/core/: agent.py  config.py  context.py  context_engine.py  delegation.py  learning.py  llm.py  prompt_cache.py  providers.py  state.py  threat.py  toolcall_repair.py
edith/gateway/: __init__.py  base.py  registry.py  runtime.py
edith/memory/: __init__.py  provider.py  store.py  vector.py
edith/ruflo/: __init__.py  bridge.py
edith/sandbox/: __init__.py  approval.py  backends.py
edith/security/: __init__.py  authorization.py  recon.py  scan.py
edith/skills/: __init__.py  registry.py
legacy/v0.1/: .env.example  .gitignore  pyproject.toml
legacy/v0.1/config/: authorization.example.yaml  edith.example.yaml
legacy/v0.1/docs/: BUILD_PLAN.md  PAINPOINTS_SOLVED.md  SECURITY.md
legacy/v0.1/edith/: __main__.py
legacy/v0.1/edith/browser/: __init__.py
legacy/v0.1/edith/core/: __init__.py  agent.py  config.py  context.py  llm.py
legacy/v0.1/edith/memory/: __init__.py
legacy/v0.1/edith/security/: authorization.py  recon.py
legacy/v0.1/edith/skills/: __init__.py
legacy/v0.1/tests/: test_memory.py  test_skills.py  test_smoke.py
tests/: test_agent_persistence.py  test_approval.py  test_authorization.py  test_browser_session.py  test_context_engine.py  test_delegation.py  test_gateway.py  test_gateway_all.py  test_learning.py  test_memory.py  test_memory_provider.py  test_prompt_cache.py  test_providers.py  test_providers_broad.py  test_security_scan.py  test_skill_frontmatter.py  test_skills.py  test_smoke.py  test_state.py  test_threat.py  test_toolcall_repair.py  test_tools.py
(+7 files in other folders)
