[project]
name = "edith"
version = "0.1.0"
description = "E.D.I.T.H. — autonomous local-first AI agent (stealth browser, authorized-security toolkit)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "E.D.I.T.H. project" }]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
browser = ["patchright>=1.40", "playwright>=1.40"]
llm = ["anthropic>=0.40", "openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
edith = "edith.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edith"]

[tool.ruff]
line-length = 100
target-version = "py311"
