[project]
name = "edith"
version = "0.1.0"
description = "E.D.I.T.H. — autonomous local-first AI agent (OpenClaw + Hermes fusion, stealth browser, authorized-security toolkit)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "E.D.I.T.H. project" }]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
browser = [
    # patchright is a patched, undetected Playwright fork; falls back to playwright
    "patchright>=1.40; python_version >= '3.11'",
    "playwright>=1.40",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.40",
]
security = [
    "python-nmap>=0.7",
    "dnspython>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
edith = "edith.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edith"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
